cocoa: Do not access the integration instance when shutting down

Task-number: QTBUG-46016
Change-Id: Icb7f0c73d5fe944538e2b9abf50c2532037e932f
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>